# cpauger

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  generated_annotation.json  pyproject.toml
.github/workflow/: ci-cd.yml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/cpauger/: TODO  __init__.py  augment_image.py  crop_obj.py  crop_with_segmask.py  generate_coco_ann.py  paste_obj.py  visualize.py
tests/: test_cpauger.py
